@@ -524,6 +524,7 @@ namespace Chummer
                 .CheapReplace("Special", () => LanguageManager.GetString("String_SpellDurationSpecial", strLanguage))
                 .CheapReplace("LOS", () => LanguageManager.GetString("String_SpellRangeLineOfSight", strLanguage))
                 .CheapReplace("LOI", () => LanguageManager.GetString("String_SpellRangeLineOfInfluence", strLanguage))
+                .CheapReplace("Touch", () => LanguageManager.GetString("String_SpellRangeTouch", strLanguage)) // Short form to remain export-friendly
                 .CheapReplace("T", () => LanguageManager.GetString("String_SpellRangeTouch", strLanguage))
                 .CheapReplace("(A)", () => '(' + LanguageManager.GetString("String_SpellRangeArea", strLanguage) + ')')
                 .CheapReplace("MAG", () => LanguageManager.GetString("String_AttributeMAGShort", strLanguage));
