@@ -629,6 +629,7 @@ namespace Chummer
                 strRange = strRange.CheapReplace("Self", () => LanguageManager.GetString("String_SpellRangeSelf"))
                     .CheapReplace("LOS", () => LanguageManager.GetString("String_SpellRangeLineOfSight"))
                     .CheapReplace("LOI", () => LanguageManager.GetString("String_SpellRangeLineOfInfluence"))
+                    .CheapReplace("Touch", () => LanguageManager.GetString("String_SpellRangeTouchLong"))
                     .CheapReplace("T", () => LanguageManager.GetString("String_SpellRangeTouch"))
                     .CheapReplace("(A)", () => '(' + LanguageManager.GetString("String_SpellRangeArea") + ')')
                     .CheapReplace("MAG", () => LanguageManager.GetString("String_AttributeMAGShort"));
